fix: simplify slot layout selector - align slot slector to similar behavior as child combinator - update base to use display: contents for cross browser consistency - refactor common alignments out from horizontal/vertical

--- a/packages/core/src/internal/base/base.element.scss
+++ b/packages/core/src/internal/base/base.element.scss
@@ -29,7 +29,7 @@
 
 slot {
   font-family: $cds-token-typography-font-family;
-  display: block;
+  display: contents !important;
 }
 
 // normalize focus styles
